--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,7 @@ description: 'GitHub Action for automated tagging of BPMN models'
 author: "Kristoffer Högberg"
 
 inputs:
-  source:
+  project_id:
     description: 'Camunda modeler project id'
     required: true
   tag:
